fix contributions hidden by navbar when referenced by permalink hash. refs #521

--- a/res/css/components/util.less
+++ b/res/css/components/util.less
@@ -7,3 +7,8 @@
         margin-left: 1rem;
     }
 }
+
+.anchor {
+    margin-top: -@nav-height;
+    padding-top: @nav-height;
+}
